2018-03-07  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	[BZ #22926]
	* sysdeps/powerpc/powerpc32/sysdep.h (ABORT_TRANSACTION_IMPL): Define
	empty for __SPE__.
	* sysdeps/powerpc/sysdep.h (ABORT_TRANSACTION): Likewise.
	* sysdeps/unix/sysv/linux/powerpc/elision-lock.c (__lll_lock_elision):
	Do not build hardware transactional code for __SPE__.
	* sysdeps/unix/sysv/linux/powerpc/elision-trylock.c
	(__lll_trylock_elision): Likewise.
	* sysdeps/unix/sysv/linux/powerpc/elision-unlock.c
	(__lll_unlock_elision): Likewise.

2018-02-19  Rical Jasan  <ricaljasan@pacific.net>

	[BZ #6889]
	* manual/filesys.texi (get_current_dir_name): Clarify behaviour.

2018-02-16  Rical Jasan  <ricaljasan@pacific.net>

	* manual/platform.texi (__riscv_flush_icache): Fix @deftypefun
	syntax.

2018-02-09  Rical Jasan  <ricaljasan@pacific.net>

	* manual/creature.texi: Convert references to gcc.info to gcc.
	* manual/stdio.texi: Likewise.
	* manual/string.texi: Likewise.

2018-02-18  Aurelien Jarno  <aurelien@aurel32.net>

	[BZ #22818]
	* posix/tst-glob_lstat_compat.c [__alpha__] (glob): Access
	the GLIBC_2.1 version.

2018-02-02  Sean McKean  <smckean83@gmail.com>

	[BZ #22735]
	* time/time.h (clock): Reference CLOCKS_PER_SEC in comment.

2018-02-10  Dmitry V. Levin  <ldv@altlinux.org>

	[BZ #22433]
	* sysdeps/unix/sysv/linux/aarch64/sys/ptrace.h (__ptrace_request):
	Remove arm-specific PTRACE_GET_THREAD_AREA, PTRACE_GETHBPREGS,
	and PTRACE_SETHBPREGS.

2018-02-14  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	* sysdeps/sh/libm-test-ulps: Update.

2018-02-09  DJ Delorie  <dj@redhat.com>

	[BZ #22827]
	* sysdeps/unix/sysv/linux/riscv/readelflib.c (process_elf_file): Use
	64-bit ELF type for 64-bit ELF objects.

2018-02-07  Igor Gnatenko  <ignatenko@redhat.com>

	[BZ #22797]
	* sysdeps/unix/sysv/linux/bits/mman-shared.h (pkey_get): Add
	missing second underscore to parameter name.

2018-02-05  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #22638]